# dichecker

./: .gitignore  CHANGELOG.md  main.py  pyproject.toml
.github/: dependabot.yml
dichecker/: __init__.py
