[tool.poetry]
name = "dichecker"
version = "0.1.0"
description = "A runtime checker for modern TypedDicts"
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dichecker" },
]
repository = "https://github.com/ooliver1/dichecker"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
